force-app/main/default/objects/Account/fields/Credit_Card_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Holder_Name__c</fullName>
    <label>Credit Card Holder/ Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>