force-app/main/default/objects/Account/fields/CSV__c.field-meta.xml
<CustomField>
    <fullName>CSV__c</fullName>
    <label>CSV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>