force-app/main/default/objects/Account/fields/CVC__c.field-meta.xml
<CustomField>
    <fullName>CVC__c</fullName>
    <label>CVC</label>
    <length>4</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>