force-app/main/default/objects/Account/fields/Date_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Date_Frozen__c</fullName>
    <label>Date Frozen</label>
    <summarizedField>Embryo_Batch__c.Storage_Date__c</summarizedField>
    <summaryForeignKey>Embryo_Batch__c.Household__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>