force-app/main/default/objects/Account/fields/Embryo_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Frozen__c</fullName>
    <label>Embryo Frozen</label>
    <summarizedField>Embryo_Batch__c.Available_Embryos__c</summarizedField>
    <summaryForeignKey>Embryo_Batch__c.Household__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>