force-app/main/default/objects/Account/fields/Embryos_Awaiting_PGT__c.field-meta.xml
<CustomField>
    <fullName>Embryos_Awaiting_PGT__c</fullName>
    <label>Embryos Awaiting PGT</label>
    <summarizedField>Embryo_Batch__c.PGT__c</summarizedField>
    <summaryForeignKey>Embryo_Batch__c.Household__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>