force-app/main/default/objects/Account/fields/Genetic_Material_Types__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Material_Types__c</fullName>
    <label>Genetic Material Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genetic_Type</valueSetName>
    </valueSet>
</CustomField>