force-app/main/default/objects/Account/fields/Household_Id__c.field-meta.xml
<CustomField>
    <fullName>Household_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Id</label>
    <type>Text</type>
</CustomField>