force-app/main/default/objects/Account/fields/Number_of_Available_Embryos__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Available_Embryos__c</fullName>
    <label>Number of Available Embryos</label>
    <summarizedField>Embryo_Batch__c.Available_Embryos__c</summarizedField>
    <summaryForeignKey>Embryo_Batch__c.Household__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>