force-app/main/default/objects/Account/fields/PGT_M_Patients__c.field-meta.xml
<CustomField>
    <fullName>PGT_M_Patients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PGT M Patients</label>
    <type>Checkbox</type>
</CustomField>