force-app/main/default/objects/Account/fields/Selected_Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Selected_Patient_Email__c</fullName>
    <label>Selected Patient Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>