force-app/main/default/objects/Account/fields/Total_Embryos_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Total_Embryos_Frozen__c</fullName>
    <label>Total Embryos Frozen</label>
    <summarizedField>Embryo_Batch__c.Frozen__c</summarizedField>
    <summaryForeignKey>Embryo_Batch__c.Household__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>