force-app/main/default/objects/Account/recordTypes/Contact_Household.recordType-meta.xml
<RecordType>
    <fullName>Contact_Household</fullName>
    <active>true</active>
    <label>Contact Household</label>
</RecordType>